# isopod

./: .concatignore  .gitignore  Cargo.toml  README.md  create_iso.bat  flake.nix  output.glue  testiso.bat
.github/workflows/: publish.yml  wiki.yml
crates/iso-test/: cargo.toml
crates/iso-test/src/: main.rs
crates/isofs/: Cargo.toml
crates/isofs-cli/src/: cli.rs  main.rs
crates/isofs/src/: lib.rs  parse.rs  serialize.rs  spec.rs  writer.rs
crates/isofs/src/writer/: error.rs  fs.rs  lba.rs  mod.rs  sector.rs  volume.rs
crates/isopod/: Cargo.toml  README.md
crates/isopod-cli/: Cargo.toml  README.md
crates/isopod-cli/src/: cli.rs  main.rs
crates/isopod/src/: builder.rs  directory.rs  error.rs  file.rs  iso.rs  layout.rs  lib.rs  parse.rs  read.rs  serialize.rs  spec.rs  udf.rs  utils.rs  volume.rs  write.rs  writer.rs
crates/tests/: Cargo.toml  iso9660.rs
crates/udfs/: Cargo.toml
crates/udfs-cli/: Cargo.toml
crates/udfs-cli/src/: main.rs
crates/udfs/src/: writer.rs
tests/: create_iso.bat
