[package]
name = "isopod-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command-line interface for the isopod ISO 9660 library"
authors = ["Maxine DeAndrade"]
repository = "https://github.com/maxine-deandrade/isopod"
keywords = ["iso", "iso9660", "filesystem", "cd", "dvd"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
isopod = { path = "../isopod", version = "0.1.0" }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
walkdir = "2.3"
indicatif = "0.17"