[package]
name = "isopod"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ISO 9660 library for creating, reading, and manipulating ISO filesystem images"
authors = ["Maxine DeAndrade"]
repository = "https://github.com/maxine-deandrade/isopod"
keywords = ["iso", "iso9660", "filesystem", "cd", "dvd"]
categories = ["filesystem"]
readme = "README.md"

[dependencies]
thiserror = "1.0"
chrono = "0.4"
log = "0.4"

[dev-dependencies]
tempfile = "3.3"